WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104958
[BlackBerry][Fullscreen] Exiting fullscreen does not set the correct scroll position
https://bugs.webkit.org/show_bug.cgi?id=104958
Summary
[BlackBerry][Fullscreen] Exiting fullscreen does not set the correct scroll p...
Jacky Jiang
Reported
2012-12-13 14:43:05 PST
PR: 231174.
Attachments
Patch
(7.92 KB, patch)
2012-12-13 16:40 PST
,
Jacky Jiang
tonikitoo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-12-13 16:40:12 PST
Created
attachment 179374
[details]
Patch
Antonio Gomes
Comment 2
2012-12-13 17:45:27 PST
Comment on
attachment 179374
[details]
Patch Patch looks familiar to me :)
Jacky Jiang
Comment 3
2012-12-14 07:38:22 PST
Committed
r137743
: <
http://trac.webkit.org/changeset/137743
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug